--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -103,7 +103,7 @@ header {
         
         .banner {
             // display: flex;
-            background-image: url('./images/car-background.jpg');
+            background-image: url('EBCD/images/car-background.jpg');
             height: 100%;
             background-position: center center;
             background-repeat: none;
@@ -113,7 +113,7 @@ header {
         }
 
         .rocket {
-            background-image: url('./images/rocket-background.jpg');
+            background-image: url('EBCD/images/rocket-background.jpg');
             background-position-y: -70%;
         }
         
