--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -103,7 +103,7 @@ header {
         
         .banner {
             // display: flex;
-            background-image: url('EBCD/images/car-background.jpg');
+            background-image: url('/images/car-background.JPG');
             height: 100%;
             background-position: center center;
             background-repeat: none;
@@ -113,13 +113,13 @@ header {
         }
 
         .rocket {
-            background-image: url('EBCD/images/rocket-background.jpg');
+            background-image: url('/images/rocket-background.JPG');
             background-position-y: -70%;
         }
         
         .banner-wave {
             height: 100%;
-            background-image: url('./images/wave.svg');
+            background-image: url('./images/wave.SVG');
             background-repeat: none;
             background-size: cover;
             background-position: center center;
