--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -103,7 +103,7 @@ header {
         
         .banner {
             // display: flex;
-            background-image: url('/images/car-background.JPG');
+            background-image: url('../images/car-background.JPG');
             height: 100%;
             background-position: center center;
             background-repeat: none;
@@ -113,14 +113,14 @@ header {
         }
 
         .rocket {
-            background-image: url('/images/rocket-background.JPG');
+            background-image: url('../images/rocket-background.JPG');
             background-position-y: -70%;
             background-color: black;
         }
         
         .banner-wave {
             height: 100%;
-            background-image: url('/images/wave.SVG');
+            background-image: url('../images/wave.SVG');
             background-repeat: none;
             background-size: cover;
             background-position: center center;
