images should work

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -120,7 +120,7 @@ header {
         
         .banner-wave {
             height: 100%;
-            background-image: url('./images/wave.svg');
+            background-image: url('https://chrismenkhus.github.io/EBCD/images/wave.svg');
             background-repeat: none;
             background-size: cover;
             background-position: center center;
